# mlir_viewer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
capture/: CMakeLists.txt  README.md
capture/cmake/: MLIRTraceConfig.cmake.in
capture/include/mlir-trace/: TraceRecorder.h
capture/lib/: TraceRecorder.cpp  TraceStorage.cpp  TraceStorage.h
capture/tests/: CheckInstallConsumer.cmake  CheckRustReader.cmake  TraceRecorderTest.cpp  TraceStorageTest.cpp
capture/tests/install-consumer/: CMakeLists.txt  main.cpp
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: serve.rs  trace_dump.rs
crates/engine/: Cargo.toml
crates/engine/src/: diff.rs  graph.rs  lib.rs  model.rs  parser.rs  provenance.rs  search.rs
crates/engine/tests/: diff.rs  graph.rs  parser.rs  provenance.rs  search.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: api.rs  assets.rs  cache.rs  lib.rs  msgpack.rs  provenance.rs
crates/server/tests/: api.rs
crates/trace-format/: Cargo.toml
crates/trace-format/src/: error.rs  fixture.rs  identity.rs  lib.rs  reader.rs  schema.rs  writer.rs
crates/trace-format/tests/: conformance.rs  identity.rs
docs/superpowers/plans/: 2026-07-02-m0-trace-foundation.md  2026-07-04-m1-mlir-capture.md  2026-07-04-m2-walking-skeleton.md  2026-07-05-m3-graph-diff.md  2026-07-05-m4a-op-identity-capture.md  2026-07-05-m4b-op-history-provenance.md  2026-07-07-m5-inspector-search.md
docs/superpowers/specs/: 2026-07-02-mlir-viewer-design.md  2026-07-05-m3-graph-diff-design.md  2026-07-05-m4a-op-identity-capture-design.md  2026-07-05-m4b-op-history-provenance-design.md  2026-07-06-m5-inspector-search-design.md  2026-07-06-real-pipeline-validation-findings.md  M4a-identity-spike-findings.md
examples/capture-toy/: CMakeLists.txt  main.cpp
examples/mlir-trace-opt/: CMakeLists.txt  main.cpp
scripts/: build-ui.sh
testdata/golden/: demo-v1.mlirtrace
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/e2e/: graph-diff.spec.ts  inspector-search.spec.ts  screenshot.spec.ts
ui/src/: App.test.tsx  App.tsx  Workspace.test.tsx  Workspace.tsx  api.test.ts  api.ts  diffDecorations.test.ts  diffDecorations.ts  main.tsx  mlirLanguage.ts  store.test.ts  store.ts  styles.css  useGlobalKeys.ts  vite-env.d.ts
ui/src/components/: CommandPalette.test.tsx  CommandPalette.tsx  GraphView.test.tsx  GraphView.tsx  HistoryView.test.tsx  HistoryView.tsx  InspectorPanel.test.tsx  InspectorPanel.tsx  IrViewer.test.tsx  IrViewer.tsx  Timeline.test.tsx  Timeline.tsx  Toolbar.test.tsx  Toolbar.tsx
ui/src/graph/: elkLayout.ts  layout.worker.ts  render.test.ts  render.ts
ui/src/test/: setup.ts
