[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mlir-viewer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
server = { path = "../server" }
tokio = { workspace = true }
trace-format = { path = "../trace-format" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
